# Mirage

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  MVP BIBLE.docx  README.md  docker-compose.yml
ai/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai/mirage_ai/: __init__.py  api.py  config.py  demo.py  engine.py  features.py  schemas.py  seed.py
ai/tests/: test_engine.py  test_features.py  test_seed.py
backend/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/mirage_backend/: __init__.py  ai_client.py  config.py  database.py  main.py  pdf_service.py  schemas.py  session_service.py
backend/scripts/: seed_demo_data.py
backend/tests/: fakes.py  test_ai_client.py  test_main_api.py  test_pdf_service.py  test_session_service.py
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: index.css
frontend/src/app/: App.tsx
frontend/src/components/dashboard/: behavior-timeline.tsx  evidence-feed.tsx  privacy-signals.tsx  recommendation-panel.tsx  trust-dna-card.tsx
frontend/src/components/shared/: logo-mark.tsx  no-active-session.tsx  sidebar.tsx  topbar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx
frontend/src/contexts/: auth-context.tsx  session-context.tsx
frontend/src/data/: demo-data.ts
frontend/src/layouts/: auth-layout.tsx  dashboard-layout.tsx
frontend/src/lib/: api-client.ts  confidence.ts  session-mappers.ts  utils.ts
frontend/src/router/: router.tsx
frontend/src/types/: api.ts  domain.ts
(+17 files in other folders)
