[project]
name = "mirage-ai"
version = "0.1.0"
description = "Mirage AI service — explainable behavioral intelligence engine (evidence synthesis, Trust DNA, decision confidence)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mirage_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
