[project]
name = "mirage-backend"
version = "0.1.0"
description = "Mirage backend — session persistence, PDF export, proxy to the ai/ evidence-synthesis service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "reportlab>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mirage_backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
